--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,28 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" style="color: white;">Student Management System</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor02">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" data-toggle="modal" data-target="exampleModal">Add Student 
+                    <span class="sr-only">(current)</span>
+                </a>
+            </li>
+        </ul>
+
+        <form class="form-inline my-2 my-lg-0">
+            <input type="search" name="key" id="searchName" class="form-control mr-sm-2" placeholder="Search by name" aria-label="Search">
+        </form>
+
+    </div>
+</nav>
+
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-xl-3" *ngFor = 'let student of students'>
@@ -7,7 +30,7 @@
 
                 <div class="card-body row">
                     <div class="col-6">
-                        <a href=""><img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="" class="img-fluid rounded-circle w-60"></a>
+                        <a href=""><img src={{student?.imageUrl}} alt="" class="img-fluid rounded-circle w-60"></a>
                     </div>
                     <div class="col-6 card-title align-self-center mb-0">
                         <h5>{{student.studentName}}</h5>
